--- a/src/chat/style/chat-message-pane.css
+++ b/src/chat/style/chat-message-pane.css
@@ -29,9 +29,8 @@
 
 .message-list {
     width: 100%;
-    height: 95%;
+    height: 100%;
     
-    border-radius: 0px 0px 5px 5px;
     list-style-type: none;
     padding: 15px;  
 
